--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,18 @@ img.pon:hover {
   padding:0;
 }
 
+#mypanel {
+  position:absolute; 
+  text-align: left; 
+  right: 0px; 
+  width: 220px; 
+  top: 0px;
+  bottom: 0px; 
+  padding-left: 5px; 
+  padding-right: 5px; 
+  background: #fff;
+}
+
 #game .alphs {
   line-height: 45px;
   text-align: left; 
